# FlowMemory

./: .env.example  .gitattributes  .gitignore  .npmrc  .slither.config.json  AGENTS.md  CONTRIBUTING.md  INSTALL_FLOWCHAIN_WINDOWS.ps1  README.md  SECURITY.md  START_FLOWCHAIN_LOCAL.ps1  foundry.toml  package-lock.json  package.json
.github/: pull_request_template.md
chain/: BASE_SETTLEMENT_ANCHOR.md  BRIDGE_SECURITY_RESEARCH.md  HARDWARE_NODE_REQUIREMENTS.md  README.md
contracts/: ACCESS_CONTROL_REVIEW.md  AgentBondManager.sol  AgentBondTimelockedMultisig.sol  AgentCreditAttestationRegistry.sol  AgentStakeRegistry.sol  AgentUnderwriterPool.sol  ArtifactRegistry.sol  BaseAgentMemoryTaskTargetMock.sol  BaseOnchainAgentMemory.sol  CursorRegistry.sol  DEPLOYMENT_BOUNDARY.md  FLOWPULSE_SCHEMA.md  FlowChainSettlementSpine.sol  FlowMemoryAfterSwapHook.sol  FlowMemoryHookAdapter.sol  FlowMemoryHookPlanner.sol  FlowMemorySettlementSpine.sol  FlowPulse.sol  ReceiptVerifier.sol  RootfieldRegistry.sol  STATIC_ANALYSIS.md  TaskBondEscrow.sol  TaskPolicyRegistry.sol  UnderwriterPoolRegistry.sol  VerifierRegistry.sol  VerifierReportRegistry.sol  WorkDebtScheduler.sol  WorkReceiptRegistry.sol  WorkerRegistry.sol
crates/flowmemory-devnet/: Cargo.toml
crates/flowmemory-devnet/src/: cli.rs  hash.rs  lib.rs  main.rs  model.rs  storage.rs
crates/flowmemory-devnet/tests/: devnet_tests.rs
crypto/: .gitignore  ATTESTATIONS.md  FLOWCHAIN_LOCAL_ALPHA_OBJECTS.md  FLOWMEMORY_CRYPTO_SPEC.md  FLOWMEMORY_LOCAL_ALPHA_OBJECTS.md  MERKLE_AND_ROOTS.md  OBSERVATION_IDENTITY.md  README.md  (+5 more)
(+1978 files in other folders)
