[package]
name = "flowmemory-devnet"
version = "0.1.0"
edition = "2024"
description = "No-value local FlowMemory devnet/appchain prototype"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
thiserror = "2.0"
k256 = { version = "0.13", features = ["ecdsa"] }
